--- a/bios/src/css/editor.css
+++ b/bios/src/css/editor.css
@@ -6,6 +6,10 @@
     --editor-font-family: ui-sans-serif,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
 }
 
+.ce-popover {
+    --width: 400px;
+}
+
 .codex-editor__loader {
     display: none !important;
   }
